--- a/diary/templates/diary/diary_detail.html
+++ b/diary/templates/diary/diary_detail.html
@@ -2,12 +2,12 @@
 {% block content %}
  
     <div>
-        <h1> {{ diary.tital }} </h1>
+        <h1> {{ diary.title }} </h1>
         <p> {{ diary.body }} </p>
     </div>
 
     <div>
-        <a href='{% url "diary:list" %}'>一覧</a>
+        <a href="{% url 'diary:list' %}">一覧</a>
 
     </div>
 
