--- a/diary/templates/diary/diary_form.html
+++ b/diary/templates/diary/diary_form.html
@@ -1,15 +1,15 @@
 {% extends 'diary/base.html' %}
 {% block content %}
 
-    <h1>{{ object|yesno:'編集,新しい日記'}}</h1>
+    <h1>{{ object|yesno:'Falsification of the past,A new day'}}</h1>
     
     <form action='' method='POST'> {% csrf_token %}
         {{ form.as_p }}
-        <button type='submit' class='submit'>{{ object|yesno:'更新,作成'}}</button>
+        <button type='submit' class='submit'>{{ object|yesno:'Changing the past,A new day is born'}}</button>
     </form>
 
     <div>
-        <a href='JavaScript:history.back()' class='btn btn-outline-primary'>&lt; 戻る</a>
+        <a href='JavaScript:history.back()' class='btn btn-outline-primary'>&lt; back</a>
     </div>
 
 {% endblock %}
